# aiagentcli

./: Cargo.toml  PROJECT_SUMMARY.md  README.md  config.example.toml  demo_ai_agent.py  test_ai_agent.sh
.ai_cli_backups/: snake_game.html_20250904_044558_backup
examples/: snake_game_example.sh
src/: ai.rs  config.rs  file_ops.rs  main.rs  terminal.rs  utils.rs
