[package]
name = "ai-cli-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
dirs = "5.0"
path-clean = "0.1"
shellexpand = "3.1"
dialoguer = "0.10"
indicatif = "0.17"
console = "0.15"
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.3", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.8"
tempfile = "3.6"
walkdir = "2.3"
base64 = "0.21"
toml = "0.7"
which = "4.4"